@@ -2,6 +2,9 @@
 
 return array(
 	'Create' => 'Anlegen',
+	'Manage my Users' => 'Meine Benutzer verwalten',
+	'User belongs to these Roles' => 'Benutzer gehört diesen Rollen an:',
+	'This user can administrate this users' => 'Benutzer kann diese Benutzer verwalten:',
 	'Your Account has been activated. Thank you for your registration.' =>
 	'Ihr Account wurde aktiviert. Danke für ihre Anmeldung. ',
 	'Registration' => 'Registrierung',
